<resources>
    <string name="app_name">LocMess</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="username">Username</string>
    <string name="registered">Not registered yet?</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_locations">Locations</string>
    <string name="title_messages">Messages</string>
    <string name="title_message">Message</string>
    <string name="new_message">New Message</string>
    <string name="error_invalid_field">Some fields are invalid!</string>
    <string name="error_saving_location">Error saving location</string>
    <string name="wifi_disabled">Wifi is disabled... Making it enabled</string>
    <string name="loading_ssids">Loading SSIDs...</string>
    <string name="wait">Please wait...</string>
    <string name="prompt_text">Locations</string>
    <string name="delivery_mode">Delivery Mode</string>
    <string name="title_activity_message_viewer">MessageViewer</string>
    <string name="msgType_all">all</string>
    <string name="msgType_received">received</string>
    <string name="msgType_sent">sent</string>
    <string name="invalid_username">Invalid Username. Username can only have letters or numbers</string>
    <string name="error_logging_in">Error logging in!</string>
    <string name="login_error">Login Error</string>
    <string name="error_registering">Error Registering</string>
    <string name="password_needed">You need to put a password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="password_size">Passwords needs to be at least 3 characters long</string>
    <string name="register_successful">Register Successful!</string>
    <string name="ok">OK</string>
    <string name="content">Content: </string>
    <string name="location">Location: </string>
    <string name="start_date">Start Date: </string>
    <string name="start_time">Start Time: </string>
    <string name="end_date">End Date: </string>
    <string name="end_time">End Time: </string>
    <string name="policy">Policy: </string>
    <string name="filters">Filters: </string>
    <string name="delivery">Delivery: </string>
    <string name="from">From: </string>
    <string name="msgtype">Type: </string>
    <string name="start">Start</string>
    <string name="settings_error">Settings error!</string>
    <string name="end">End</string>
    <string name="add_filter">Add Filter</string>
    <string name="add_GPS">Add GPS location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="radius">Radius (meters)</string>
    <string name="location_name">Location name</string>
    <string name="post_message">Post Message</string>
    <string name="keypair">Add Keypair</string>
    <string name="key">Enter Key</string>
    <string name="value">Enter Value</string>
    <string name="add_ssid_location">Add SSID location</string>
    <string name="wifi">Wi-Fi network name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="third_party">Number of max third-party messages transport: </string>
    <string name="save">Save</string>
</resources>
