<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keypair"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/infoInputDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"/>

    <AutoCompleteTextView
        android:id="@+id/keyInputDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/key"
        android:inputType="text"
        android:completionThreshold="1"
        android:ems="10"/>

    <AutoCompleteTextView
        android:id="@+id/valueInputDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value"
        android:inputType="text"
        android:completionThreshold="1"
        android:ems="10"/>

</LinearLayout>